# partana

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
demo/: ana.ipynb
src/: ParticleFrames.py  ParticleIntegrator.py  ParticlePlots.py  __init__.py  demo.m  mhdFuncs.py
src/partana/: __init__.py
src/partana/frames/: frames.py
src/partana/io/: converter.py
src/partana/plots/: __init__.py  plotter.py
src/partana/src_old/: particle_frames.py  particle_plots.py
src/partana/synthesis/: __init__.py  fit.py  forward.py
src/partana/tests/: ard.j  get_field.py  rd.m  tests.py
