[tool.poetry]
name = "partana"
version = "0.1.0"
description = "Particle analysis tools"
authors = ["Hao Wu <aster0502@outlook.com>"]
packages = [
    { include = 'partana', from = 'src'}
]
license = 'MIT'
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
pandas = "^2.2.3"
h5py = "^3.12.1"
pyvista = "^0.44.2"
scipy = "^1.15.1"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
